feat: Initial commit

--- a/blog2.html
+++ b/blog2.html
@@ -87,17 +87,17 @@
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/MarkVed17">github</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/LahaneVedant">twitter</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/vedantlahane/">linkedin</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://medium.com/@VedantLahane">medium</a>
-            </li>
+                <a class="link" href="https://github.com/Diablo-web">github</a>
+              </li>
+              <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/SumedhK01">twitter</a>
+              </li>
+              <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/sumedh-kurhade-98274a19b/">linkedin</a>
+              </li>
+              <li class="list-item-inline">
+                <a class="link" href="https://medium.com/@sumedhkurhade">medium</a>
+              </li>
         </ul>
     </footer>
 </body>
