--- a/blog1.html
+++ b/blog1.html
@@ -221,16 +221,16 @@
     <div class="footer-header">social media presence</div>
     <ul class="social-links list-non-bullet">
       <li class="list-item-inline">
-        <a class="link" href="https://github.com/MarkVed17">github</a>
+        <a class="link" href="https://github.com/Diablo-web">github</a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="https://twitter.com/LahaneVedant">twitter</a>
+        <a class="link" href="https://twitter.com/SumedhK01">twitter</a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="https://www.linkedin.com/in/vedantlahane/">linkedin</a>
+        <a class="link" href="https://www.linkedin.com/in/sumedh-kurhade-98274a19b/">linkedin</a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="https://medium.com/@VedantLahane">medium</a>
+        <a class="link" href="https://medium.com/@sumedhkurhade">medium</a>
       </li>
     </ul>
   </footer>
