--- a/projects.html
+++ b/projects.html
@@ -121,8 +121,8 @@
           exchange less messy & hence provides you with an exchange that
           contains the least number of notes to complete the exchange.
         </p>
-        <a class="link link-primary" href="https://paisa-paisa-paisa.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/cash-register">view source</a>
+        <a class="link link-primary" href="https://paisa-rupee.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/cash-register">view source</a>
       </li>
       <li>
         <h1>bookshelf</h1>
@@ -152,8 +152,8 @@
           have got you covered. this app which i have made in vanillaJS will
           tell you whether a given number is a prime number or not 😇
         </p>
-        <a class="link link-primary" href="https://check-for-prime.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/prime-number-vanillaJS">view source</a>
+        <a class="link link-primary" href="https://check-for-prime-number.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/prime-number-vanillaJS">view source</a>
       </li>
       <li>
         <h1>is it a leap year?</h1>
@@ -163,8 +163,8 @@
           worry 😇 i have got you covered 😉 this app that i have made in
           vanillaJS will tell you if a year is a leap year or not!
         </p>
-        <a class="link link-primary" href="https://check-for-leap-year.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/leap-year-vanillaJS">view source</a>
+        <a class="link link-primary" href="https://check-for-leapyear.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/leap-year-vanillaJS">view source</a>
       </li>
       <li>
         <h1>what would shakespeare sayeth?</h1>
@@ -197,8 +197,8 @@
           information about me, my tech stack, my projects & you can also read
           the blogs I have written!
         </p>
-        <a class="link link-primary" href="https://vedantlahane.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/portfolio-website">view source</a>
+        <a class="link link-primary" href="https://sumedhkurhade.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/portfolio-website">view source</a>
       </li>
       <li>
         <h1>prime number</h1>
