fix: broken url

--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,8 @@
           birthdate isn't a palindrome in any format then the app will tell you the nearest date from your birth date
           which is a palindrome! isn't it exciting? go give it a try! 😇
         </p>
-        <a class="link link-primary" href="https://borndate-palindrome.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/birthday-palindrome">view source</a>
+        <a class="link link-primary" href="https://is-your-borndate-palindrome.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/birthday-palindrome">view source</a>
       </li>
       <li>
         <h1>do you know your triangles?</h1>
@@ -79,13 +79,13 @@
           sides of a triangle, area of a triangle, etc.
         </p>
         <p>
-          <a class="link link-primary" href="https://replit.com/@VedantLahane/triangles?embed=1&output=1">live project
+          <a class="link link-primary" href="https://replit.com/@Diablo-web/triangles?embed=1&output=1">live project
             (cli)</a>
-          <a class="link link-secondary" href="https://github.com/MarkVed17/triangles-cli">view source (cli)</a>
+          <a class="link link-secondary" href="https://github.com/Diablo-web/triangles-cli">view source (cli)</a>
         </p>
         <p class="more-links">
-          <a class="link link-primary" href="https://know-your-triangle.netlify.app">live project (vanillaJS)</a>
-          <a class="link link-secondary" href="https://github.com/MarkVed17/do-you-know-triangles">view source
+          <a class="link link-primary" href="https://do-you-know-the-triangle.netlify.app/">live project (vanillaJS)</a>
+          <a class="link link-secondary" href="https://github.com/Diablo-web/do-you-know-Triangles">view source
             (vanillaJS)</a>
         </p>
       </li>
@@ -98,14 +98,14 @@
           is lucky or not with the help of your lucky number 😇
         </p>
         <p>
-          <a class="link link-primary" href="https://replit.com/@VedantLahane/isYourBirthdayLucky?embed=1&output=1">live
+          <a class="link link-primary" href="https://replit.com/@Diablo-web/isYourBirthdayLucky?embed=1&output=1">live
             project (cli)</a>
-          <a class="link link-secondary" href="https://github.com/MarkVed17/isYourBirthdayLucky-cli">view source
+          <a class="link link-secondary" href="https://github.com/Diablo-web/isYourBirthdayLucky-cli">view source
             (cli)</a>
         </p>
         <p class="more-links">
-          <a class="link link-primary" href="https://birthdate-luck.netlify.app/">live project (vanillaJS)</a>
-          <a class="link link-secondary" href="https://github.com/MarkVed17/isYourBirthdayLucky">view source
+          <a class="link link-primary" href="https://date-of-birth-lucky.netlify.app/">live project (vanillaJS)</a>
+          <a class="link link-secondary" href="https://github.com/Diablo-web/isYourBirthdayLucky">view source
             (vanillaJS)</a>
         </p>
       </li>
@@ -131,8 +131,8 @@
           Did you ever thought of reading books but never started one? Don't worry I've got a list for you. Happy
           Reading :)
         </p>
-        <a class="link link-primary" href="https://0oekk.csb.app/">live project</a>
-        <a class="link link-secondary" href="https://codesandbox.io/s/bookshelf-0oekk">view source</a>
+        <a class="link link-primary" href="https://z6p7vz.csb.app/">live project</a>
+        <a class="link link-secondary" href="https://codesandbox.io/s/bookshelf-z6p7vz">view source</a>
       </li>
       <li>
         <h1>emoji interpreter</h1>
@@ -141,8 +141,8 @@
           Know your emotions. This will interpret emojis. Put an emoji and it
           will tell what that means. 😲
         </p>
-        <a class="link link-primary" href="https://391wk.csb.app/">live project</a>
-        <a class="link link-secondary" href="https://codesandbox.io/s/emoji-interpreter-391wk">view source</a>
+        <a class="link link-primary" href="https://l9qtez.csb.app/">live project</a>
+        <a class="link link-secondary" href="https://codesandbox.io/s/emoji-interpreter-l9qtez">view source</a>
       </li>
       <li>
         <h1>is it a prime number?</h1>
