feat: Initial commit

--- a/blog1.html
+++ b/blog1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Memorable Header Goal⚽! | Vedant Lahane</title>
+  <title>King Kohli Comeback 🏏 | Sumedh Kurhade</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -26,100 +26,86 @@
   </nav>
 
   <div class="container container-center">
-    <h1 class="hero-heading">The Memorable Header Goal⚽!</h1>
-    <small>July, 2021</small>
+    <h1 class="hero-heading">King Kohli Comeback 👑🏏!</h1>
+    <small>Nov, 2022</small>
 
     <img class="blog-hero" src="./images/blog1.svg" alt="medium-blog" />
     <hr />
     <i>
-      A usual Saturday in my life that resulted in one of the most memorable days, all thanks to The Memorable Header
-      Goal!
+      A normal Sunday in my life that resulted in one of the most memorable days, all thanks to King Kohli!
     </i>
     <hr />
     <p>
-      Namaste, I don’t really know what brought you here & why you should read all of this, but one thing I promise is
-      that you’ll definitely have some fun reading this sports eccentric rollercoaster of mine.
+      Hello, I don’t really know what brought you here & why you should read all of this, but this is my first blog 
+      and I hope that every one will enjoy by reading this blog.
     </p>
     <p>
-      Hold up, hold up let me first give you some brief about what this is all about.
+      Hold up Everyone, you already know about the T20 match of India vs Pakistan.
     </p>
     <p>
-      Although I call Saturdays & Sundays usual but recently (about a month), I’ve been into playing football at a
-      ground in my vicinity.
-      There’s me(AMF), two cousins of mine(GK & RB), four of my friends(2 STs, 2 CBs).
+      Although I call Saturdays & Sundays usual but recently (about a month), I was excited to watch this natch along with my friends.
+      There’s me(SK) wearing India jersey, one little brother(RK), five of my friends(SP, AK, MR, AR, DG).
     </p>
     <i>
       LOL, not disclosing any of their names, hope they start writing their own blogs (whatever you call this thing)
       soon.
     </i>
     <p>
-      Adding some details, we woke at a very impossible hour i.e. 6 AM, kinda drowsy, kinda half-dead, kinda IDK, and
-      somehow manage to reach the field at around 7 AM. Clock’s at 7:30 AM is when the play starts.
+      Adding some details, we woke at a very usual hour of waking on sunday i.e. 9 AM, kinda drowsy, kinda IDK. 
+      Clock’s at 1:30 PM is when the play starts.
       <br />
-      It’s the <strong>TIGERS vs CUBS</strong> match. Okay, let me give you some more context. CUBS👶 are the lazy
-      bums(JK): me(AMF), two cousins of mine(GK & RB), four of my friends(2 STs, 2 CBs).
-      TIGERS🐯are the kind-hearted, amazing people I’ve met so far. I guess you must be presuming them to be someone of
-      our age(20yrs) (I assume only my friends reading this, so our ages +/- 2).
-      Might come as a surprise for you but the TIGERS are averaging around 32 years in age😲. Shocked? So was I when I
-      first met the TIGERS.
+      It’s the <strong>IND vs PAK</strong> match. Okay, let me give you some more context. The match played on Melbourne Cricket Ground(MCG).
+      <h1>TOSS TIME!!! 📢</h1>
+      India Pakistan. In the blue corner, Rohit Sharma India Skipper. In the Green Corner Pakistan Skipper Babar Azam. 
+      Rohit Sharma flip the coin and won the toss. Decided to bowl first.
     </p>
 
     <strong>FYI</strong>:
     <p class="FYI-bg">
-      Today’s brief — ⚽⚽⚽⚽⚽⚽ The 6 CR tigers🐯🐯 hounded Parel stadium amidst intermittent showers today 🌆🌆 .
-      The 9 cubs 🐭🐭 followed suit. Two teams were formed (tigers choosing 2 cubs) … Cool passing and adept dribbling
-      left the cubs baffled.
-      However, a water pool💧💧 near the cubs’ den (goal) played spoilsport, and ironically though the tigers at times
-      created gaps amongst the cubs .. conceded 4 goals ..
-      Panting for breath🙊 in around 25 mins of hectic play.⚽⚽.
-      the interval was utilized for strategic deliberations over cups of hot tea served by the Om brigade.
-      ☕☕ In the eventful 2nd half, the tigers realizing that the leather sphere⚽ needs to be pushed inside the cubs’ den
-      … saw them scoring 2 scintillating goals.. 🧐🧐
-      In the end, the cub’s team won by 4–2 with the vicious promise🤨 that the tigers will come back strong tomorrow…
-      It’s a different issue that the tongues of the tigers were found protruding out of their mouth spouts…while vying
-      for revenge.. 🥴
+      <h1>MATCH BEGINS!!! 📢</h1>
+      Today’s brief — 🏏🏏🏏🏏🏏 The 11 Indian tigers🐯🐯 in MCG stadium amidst intermittent showers today on Pakistan .
+      First over by Bhuvneshwar Kumar Right-Arm-Fast-Medium.
+      On Strike end Babar Azam who's T20 rank is 3 & on Non-Strike end M Rizwan.
+      The ball started swinging gave a difficult start to pakistan opener and brilliant spell by Kumar.
     </p>
     <p>
       <strong>FYI</strong>:
-      <br />Team names credit solely belongs to Sir. I didn’t like it tbh but now I’m getting quite used to it.
+      <br />Pakistan First Wicket
     </p>
     <p>
-      My first day of playing on that field.
+      Second over by Arshdeep Singh.
       <br />
-      So now you must have got a better context of who the mighty TIGERS & the brave CUBS are. By the way, the piece
-      above was written by Sir and he writes such must-read pieces after every match & shares it on the WhatsApp group.
-      I strongly believe he inspired me to write this.
+      I started believed that Arshdeep will give his best performance today. 
     </p>
     <p>
-      I truly appreciate Sir (TIGERS’ captain), also the most senior player in their team. A total football enthusiast.
-      I can’t imagine a person aging 49 years, yet plays classic soccer amongst us. I’ll give him all the credit and
-      won’t deny that he plays better than my future 49. Just kidding, I play better. Kidding again LOL.
+      I truly appreciate the Indian Team bowling unit (India’ captain), also the most senior player in their team. A total cricket enthusiast.
+      I can’t imagine a person aging 35 years, leading team India. Although this T20 was really bad for him but sill I support him.
     </p>
     <p>
-      Oof! I understand this must’ve been a lot to take in, but I feel the context was necessary. Let’s get back to what
-      was the main intent behind writing this piece, “The Memorable Header Goal⚽!”
+      Now, Coming to the first ball of Arshdeep in T20 world cup to Babar Azam hard-cutting ball to Pakistan Skipper. Hurrah! Arshdeep got LBW to B Azam.
+      and now Pakistan score was 1 run with 1 wicket and my all friend started celebrating 🎉🎉🎉.
     </p>
     <p>
-      Plot twist🔀: Just before the match begins, one of my ST friends were added to the TIGERS as they fell 1 short in
-      the number of players in a team. His joining the opponents made the CUBS link-up passing in the opposition-third a
-      bit difficult as there was his void to fill😢.
+      Plot twist🔀: Just before the match begins, one of my friends said that pakistan opener will shatter India bowling side😢.
     </p>
     <hr />
     <p>
-    <h1>MATCH BEGINS!!! 📢</h1>
-    <strong>3 minutes</strong> into the game and the TIGERS score⚽!
+    <strong>2nd Wicket</strong>M Rizwan Pakistan Top order batsman got out on Fine Leg!
     <br />
-    A beautiful long-range goal exactly 20 yards from the goal-post. God that was an absolute beauty.
+     A poor pull shot on fine leg by Rizwan.What an Excellent ball by Arshdeep.God that was an absolute beauty.
     <br />
-    <h3>TIGERS🐯 1–0 👶CUBS</h3>
+    <h3>PAK 15-2</h3>
     <hr />
-    <strong>5 minutes</strong> it was when my man, the only ST on my team(one of my ST friends) fired another stunner🚀
-    of the match. A shot, taken from about 25 yards. The game was all leveled now.
-    <h3>TIGERS🐯 1–1 👶CUBS</h3>
+    <strong>IFTHIKAR STORM⛈️⛈️</strong> Having found themselves in a spot of bother at 15/2,
+    Pakistan needed a solid, sustained recovery and it came through Iftikhar and Masood.
+    The duo survived the nervy phase and steadily guided Pakistan out of choppy waters with a 76-run partnership for the third wicket. 
+    However, the scoring rate was quite slow. And soon Axar Patel was introduced to bowl the 12th over and 
+    Iftikhar targeted him with three sixes in it and also completed a well-compiled half-century.
+    <h3>Wicket of Ifthikar</h3>
     <hr />
-    <strong>7 minutes</strong> it was when the CUBS were leading the game now, all thanks to the same ST on the goal
-    sheet. My friend was having one of the most memorable matches he’s been into. CUBS leading!!! Woohoo🎉🎉🎉
-    <h3>TIGERS🐯 1–2 👶CUBS</h3>
+    A timely bowling change that saw Mohammed Shami being brought back for a fresh spell gave India a massive breakthrough as Iftikhar was trapped lbw on 51.
+    INDIA leading!!! Woohoo🎉🎉🎉
+    <h3>91-3</h3>
     <hr />
     I know you must be thinking where’s my presence in the game so far. If I were you reading this, I would’ve already
     judged the person writing this to be the one maintaining scoresheets 📃 or another Google match commentary🎤
@@ -128,90 +114,101 @@
     <br />
     Time to speed run the match commentary🌪.
     <br />
-    <strong>20 & 25 minutes</strong> brought the TIGERS back into the game as the CUBS defense was dangling as the
-    TIGERS’ strikers fired rockets🚀 into the goal, all from a range of 20–30 yards. LOL, I now feel like adding my
-    presence in the game.
+    <strong>Kung-Fu Pandya</strong> Ifthikar wicket triggered a mini collapse and
+    allrounder Hardik Pandya feasted on Pakistan batters taking three wickets in two overs to leave them struggling on 115/6.
     <br />
-    <strong>My confession</strong>: FYI, I play as an AMF on my team. Not a defender (if you know, you know. I’d be
-    really pleased if you got the context). To add, I played some masterclass passes in the opposition’s third but the
-    stranger ST missed all of those. A bad day for him😔.
+    <strong>Ending of First innings</strong>:Another recovery followed and now Masood at the centre of it. 
+    He went on to complete his half-century as well.
+    With India pulling things back in the middle overs, 
+    they were again struck by the menace of 19th over as Arshdeep 
+    leaked 14 runs in it including a six to Shaheen Afridi. 
+    Bhuvneshwar Kumar though bowled a decent 20th over from which Pakistan managed 10 runs to give themselves a fighting total..
     </p>
     <hr />
     <p>
-    <h2>📢HALF-TIME (30 minutes)</h2> <strong>(30 minutes)</strong> of non-stop hustle and the CUBS were trailing.
-    <h3>TIGERS🐯 3–2 👶CUBS</h3>
-    A few more commentary lines and we’ll get back to something really incredible, something we didn’t expect we would
-    ever witness on that pitch. I’d like to add that right before Half Time, I engaged in a shoulder barge wherein the
-    opponent (a very hefty guy) blocking my path on the ball. Him attempting to pass in our defensive half, I
-    intercepted that pass and as we were standing right at the edge of the outside line the ball went out of gameplay.
+    <h2>📢PAK: 159/8</h2> through non-stop hustle.
+    <h3>BREAK TIME</h3>
+      Since the score was Average to chase 160, but the pakistan bowling side was dangerous to us for chasing 160.
     <br />
-    Outside throw for TIGERS and I being completely into the shoulder barge with him didn’t know it was my last touch
-    before the ball went out. The point of mentioning all of this was to just enjoy the moment (Ramos & Messi’s moment
-    on the outside line) where I just like Ramos tossed the ball over that guy (Messi here). Damn his looks after that
-    moment! I thought I won that fuzzy fight!🕺 It was really funny LOL.
+    I already had a thought that pakistan bowler will break the Indian Opener. So I cross my finger for Rohit Sharma
+    to be there till last over.
     <hr />
-    <h1>SECOND-HALF STARTS!!!📢📢📢</h1>
-    TIGERS really had a hold of the game by now as they now pushed the lead further.
-    <h3>TIGERS🐯 4–2 👶CUBS</h3>
+    <h1>SECOND-INNINGS STARTS!!!📢📢📢</h1>
+    India had a good chances to chase the target, since most of our player had a really good match in Melbourne.
+    <h3>IND: 7-1</h3>
     <hr />
-    <strong>40 minutes</strong>, the Game getting intense, and then came a moment of relief to the CUBS when their
-    Captain stood up when the team needed him the most🙌. It’s really sweet of you to imagine me as the CUBS Captain.
-    I’ll be glad to be his successor. Ugh!!! Enough Off-topic.
-    <h3>TIGERS🐯 4–3 👶CUBS</h3>
+    <strong>COLLAPSE OF OPENER</strong>, the Game started getting intense, and then KL wicket put a huge hole in for team India as this was not a good batting in Powerplay.
+    Some of my friend just stop watching the match.
+    After KL Rahul, the Captain also got out when team needed him the most🙌. It was really hard for us to imagine that Captain got catch-out by Haris Right-Arm-Fast-Medium.
+    <h3>DISSAPPOINTMENT INCREASES</h3>
     <hr />
-    <strong>50 minutes</strong> and the TIGERS about to seal the game as their front three(attackers) were doing wonders
-    in the CUBS defensive third.
-    TIGERS stormed the next two incredible goals⚽⚽.
-    <h3>TIGERS🐯 6–3 👶CUBS</h3>
+    <strong>SKY</strong> and Slightly short from Haris, and SKY pounces on it. Does not bother to go back, just stands and pulls for four. 
+    Haris bowls short again, this time SKY tries to play it over the slips and
+    manages a tame edge, MASSIVE wicket for Pakistan!
+    <h3>PAKISTAN COMEBACK</h3>
     <hr />
-    I understand it’s getting too long, kindly bear with me. Here’s the plot twist again…
-    <strong>52 minutes</strong> and the CUBS tiring legs now felt very much in the game. This goal now meant my Striker
-    buddy scored his powerful hattrick⚽⚽⚽ of goals.
+    Axarrun out. Axar pushes Shadab’s first ball to mid-wicket and sets off,
+    but Kohli sends him back – and rightly so. Rizwan almost fails to gather but he somehow, 
+    amidst the confusion, he knocks the bails off. The fielders are not enthusiastic, but Rizwan had actually done his bit.
+    And After Axar Wicket I just stop watching the match and we all thought that Pakistan is going to win the MATCH.  
     <br />
     FYI:
     <br />
-    Just <strong>8 minutes</strong> left into the game.
-    <h3>TIGERS🐯 6–4 👶CUBS</h3>
+    <strong>Don't lose the will to fight!</strong> 
+    <h3>KING KOHLI INCREDIBLE SIXES</h3>
     <hr />
     <p class="Moment-bg">Means a lot if you’ve stuck with my monologue till this moment, I promise I won’t disappoint
       you hereafter.
-      55 minutes, the CUBS playing hard, pushing all their way, as they were 2 goals behind.
+     We all boys just started playing football.
       <br />
       <cite>
-        “I will not quit.”
-        - Cristiano Ronaldo
+        “Today I will play the best innings of my life.”
+        - Virat Kohli
       </cite>
       <br />
       <em>
-        A pin-point cross into the box and flying in, dodging the TIGERS defenders comes the BEST of me on that
-        memorable day. What an astonishing header goal it was! I remember not sleeping that whole night. (P.S.: Copa
-        America Finals night it was, so,…)💯
+       My cousin started calling me. Come here and watch the match, Kohli started smahing Six and last 3 over are remaining and I asked him how much wicket has fallen.
+       He said: Only 4. I was suprised that they did not lost the wickets from Powerplay.
+       So we decided to watch the match on mobile on Hotstar. Since the screen was small, we all did manage.
+       <strong>2 sixes</strong>,  India needed 160 runs to win the match, which team India reached on the last delivery.
+      However, India needed 28 runs off 8 balls to win the match and it looked like Virat won't be able to 
+      take team India to victory despite being not out, but two sixes which came out of Virat's bat were I become the
+      fan of Kohliand I would remember for years to come. 
+      On the 5th ball of the 19th over, Virat smacked Haris Rauf while staying still on his ground. 
+      This six by Virat was so classy that one'd see it again and again on repeat. 
+      After seeing this six, even captain Rohit Sharma's mouth was left open.
+      After this when 22 runs were needed off 7 deliveries, 
+      Virat Kohli dispatched the last delivery over fine leg for another six.🚀🚀🚀🚀🚀
+      we all started dancing on the ground and just waiting to burn the fire crackers for India Victory.
       </em>
     </p>
-    <h3>TIGERS🐯 6–5 👶CUBS</h3>
-    </p>
+    <h1>THE UNEXPECTED LAST OVER</h1>
     <hr />
-    <em>
-      <p class="Moment-bg">
-        <strong>59 minutes</strong>, just a minute left into the game and the scoreboard read TIGERS 6–5 CUBS. The CUBS
-        pushing their life for that one goal, that if not scored may result in the most disappointing moment of our
-        playing career. GOAL!!!!!!!!!!!! Who’s it! Who’s it! Who’s it? It’s me again!!!.
-        A brilliant pass played by my Captain followed by my subtle dribble past the TIGERS Goalkeeper to fetch my
-        brace.
-        All squared now!!!!!! 6–6 it is.
-    </em>
-    </p>
-    <h3>TIGERS🐯 6–6 CUBS👶</h3>
-    <hr />
-    <strong>The final minute💀</strong>of the game. Both TIGERS & CUBS making every effort to get past that 6–6
-    deadlock. Now comes our FALSE 9 (who had a bad game so far) to step up on big times and shooting a long-range
-    screamer🚀 right from 30 yards.
-    <h1>FULL-TIME📢📢📢</h1>
-    <h3>TIGERS🐯 6–7 CUBS👶</h3>
-    <hr />
+    <strong>The last over</strong>of the game, which had everything- 1s, 2s, 3s, four, wide, no ball, free hit, catch, clean bowled, run out, stumping.
+    India needed 16 runs off the final over from Mohammad Nawaz, here’s how things unfolded:
     <p>
-      The session ended with CUBS flexing (i mean stretching) & having their victory drink (I mean chai!), after all, it
-      had been the CUBS’ day. (iykyk)
+      <h3>Catch out</h3>
+      Pakistan drew first blood when the all-rounder attempted to smash the ball on the leg side, 
+      only to edge the delivery to the covers where captain Babar Azam pouched the catch.
+      <h3>
+        Single
+      </h3>
+      Dinesh Karthik gets a full toss and swatted it down to long-on for a single.
+      <h3>Double</h3> 
+      Kohli dragged a yorker to long on and took two to keep the strike.
+      <h3>Six and no ball</h3>
+      Nawaz’s high full toss is smashed by Kohli over deep square leg, where the fielder on the ropes 
+      gets a hand to it but fails to keep the ball in play, and it goes for six. The umpire also calls a no-ball for height.
+      <h3>Clean bowled off a free hit</h3>
+      Nawaz cleaned up Kohli and they run three by the time the throw came in from the third-man region.
+      <h3>Stump or run out</h3>
+      Karthik tried to make room for a shot but the ball hits his pad. 
+      Alert Mohammad Rizwan was quick to react and whipped the bails off to complete the stumping.
+      <h3>Wide ball</h3>
+      Pressure gets to Nawaz again and he bowls a wide down the leg side that Ashwin gleefully leaves.
+      My all friend were amazed by Ashwin smart moves.
+      <h3>Four</h3>
+      Ashwin scooped the ball over the inner circle and ran to the other end with his arms raised.
       Thank you so much for your time 🙏
     </p>
     </p>
