--- a/blog1.html
+++ b/blog1.html
@@ -90,7 +90,7 @@
     </p>
     <hr />
     <p>
-    <strong>2nd Wicket</strong>M Rizwan Pakistan Top order batsman got out on Fine Leg!
+    <strong>2nd Wicket </strong> M Rizwan Pakistan Top order batsman got out on Fine Leg!
     <br />
      A poor pull shot on fine leg by Rizwan.What an Excellent ball by Arshdeep.God that was an absolute beauty.
     <br />
@@ -134,7 +134,7 @@
     to be there till last over.
     <hr />
     <h1>SECOND-INNINGS STARTS!!!📢📢📢</h1>
-    India had a good chances to chase the target, since most of our player had a really good match in Melbourne.
+    India had a good chances to chase the target, since most of our player had knowned the pitch very well of Melbourne.
     <h3>IND: 7-1</h3>
     <hr />
     <strong>COLLAPSE OF OPENER</strong>, the Game started getting intense, and then KL wicket put a huge hole in for team India as this was not a good batting in Powerplay.
@@ -142,7 +142,7 @@
     After KL Rahul, the Captain also got out when team needed him the most🙌. It was really hard for us to imagine that Captain got catch-out by Haris Right-Arm-Fast-Medium.
     <h3>DISSAPPOINTMENT INCREASES</h3>
     <hr />
-    <strong>SKY</strong> and Slightly short from Haris, and SKY pounces on it. Does not bother to go back, just stands and pulls for four. 
+    <strong>SKY Wicket</strong> , Slightly short from Haris, and SKY pounces on it. Does not bother to go back, just stands and pulls for four. 
     Haris bowls short again, this time SKY tries to play it over the slips and
     manages a tame edge, MASSIVE wicket for Pakistan!
     <h3>PAKISTAN COMEBACK</h3>
@@ -157,7 +157,7 @@
     <strong>Don't lose the will to fight!</strong> 
     <h3>KING KOHLI INCREDIBLE SIXES</h3>
     <hr />
-    <p class="Moment-bg">Means a lot if you’ve stuck with my monologue till this moment, I promise I won’t disappoint
+    <p class="Moment-bg"> Means a lot if you’ve stuck with my monologue till this moment, I promise I won’t disappoint
       you hereafter.
      We all boys just started playing football.
       <br />
@@ -184,7 +184,7 @@
     </p>
     <h1>THE UNEXPECTED LAST OVER</h1>
     <hr />
-    <strong>The last over</strong>of the game, which had everything- 1s, 2s, 3s, four, wide, no ball, free hit, catch, clean bowled, run out, stumping.
+    <strong>The last over</strong> of the game, which had everything- 1s, 2s, 3s, four, wide, no ball, free hit, catch, clean bowled, run out, stumping.
     India needed 16 runs off the final over from Mohammad Nawaz, here’s how things unfolded:
     <p>
       <h3>Catch out</h3>
@@ -209,7 +209,7 @@
       My all friend were amazed by Ashwin smart moves.
       <h3>Four</h3>
       Ashwin scooped the ball over the inner circle and ran to the other end with his arms raised.
-      Thank you so much for your time 🙏
+     <h2>Thank you so much for your time 🙏</h2> 
     </p>
     </p>
   </div>
