--- a/blog1.html
+++ b/blog1.html
@@ -75,14 +75,15 @@
     <p>
       Second over by Arshdeep Singh.
       <br />
-      I started believed that Arshdeep will give his best performance today. 
+      I started believing that Arshdeep will give his best performance today. 
     </p>
     <p>
       I truly appreciate the Indian Team bowling unit (India’ captain), also the most senior player in their team. A total cricket enthusiast.
       I can’t imagine a person aging 35 years, leading team India. Although this T20 was really bad for him but sill I support him.
     </p>
     <p>
-      Now, Coming to the first ball of Arshdeep in T20 world cup to Babar Azam hard-cutting ball to Pakistan Skipper. Hurrah! Arshdeep got LBW to B Azam.
+      Now, Coming to the first ball of Arshdeep in T20 world cup to Babar Azam hard-cutting ball to Pakistan Skipper.
+       Hurrah! Arshdeep got LBW to B Azam
       and now Pakistan score was 1 run with 1 wicket and my all friend started celebrating 🎉🎉🎉.
     </p>
     <p>
@@ -96,12 +97,12 @@
     <br />
     <h3>PAK 15-2</h3>
     <hr />
-    <strong>IFTHIKAR STORM⛈️⛈️</strong> Having found themselves in a spot of bother at 15/2,
+    <strong>IFTIKhAR STORM⛈️⛈️</strong> Having found themselves in a spot of bother at 15/2,
     Pakistan needed a solid, sustained recovery and it came through Iftikhar and Masood.
     The duo survived the nervy phase and steadily guided Pakistan out of choppy waters with a 76-run partnership for the third wicket. 
     However, the scoring rate was quite slow. And soon Axar Patel was introduced to bowl the 12th over and 
     Iftikhar targeted him with three sixes in it and also completed a well-compiled half-century.
-    <h3>Wicket of Ifthikar</h3>
+    <h3>Wicket of Iftikhar</h3>
     <hr />
     A timely bowling change that saw Mohammed Shami being brought back for a fresh spell gave India a massive breakthrough as Iftikhar was trapped lbw on 51.
     INDIA leading!!! Woohoo🎉🎉🎉
@@ -110,11 +111,11 @@
     I know you must be thinking where’s my presence in the game so far. If I were you reading this, I would’ve already
     judged the person writing this to be the one maintaining scoresheets 📃 or another Google match commentary🎤
     API (technical, don’t overthink).
-    Give me some time, I’ve done wonders ahead LMAO.
+    Give me some time.
     <br />
     Time to speed run the match commentary🌪.
     <br />
-    <strong>Kung-Fu Pandya</strong> Ifthikar wicket triggered a mini collapse and
+    <strong>Kung-Fu Pandya</strong> Iftikhar wicket triggered a mini collapse and
     allrounder Hardik Pandya feasted on Pakistan batters taking three wickets in two overs to leave them struggling on 115/6.
     <br />
     <strong>Ending of First innings</strong>:Another recovery followed and now Masood at the centre of it. 
@@ -134,7 +135,7 @@
     to be there till last over.
     <hr />
     <h1>SECOND-INNINGS STARTS!!!📢📢📢</h1>
-    India had a good chances to chase the target, since most of our player had knowned the pitch very well of Melbourne.
+    India had a good chances to chase the target, since most of our player had known the pitch very well of Melbourne.
     <h3>IND: 7-1</h3>
     <hr />
     <strong>COLLAPSE OF OPENER</strong>, the Game started getting intense, and then KL wicket put a huge hole in for team India as this was not a good batting in Powerplay.
@@ -147,7 +148,7 @@
     manages a tame edge, MASSIVE wicket for Pakistan!
     <h3>PAKISTAN COMEBACK</h3>
     <hr />
-    Axarrun out. Axar pushes Shadab’s first ball to mid-wicket and sets off,
+    Axar run out. Axar pushes Shadab’s first ball to mid-wicket and sets off,
     but Kohli sends him back – and rightly so. Rizwan almost fails to gather but he somehow, 
     amidst the confusion, he knocks the bails off. The fielders are not enthusiastic, but Rizwan had actually done his bit.
     And After Axar Wicket I just stop watching the match and we all thought that Pakistan is going to win the MATCH.  
@@ -169,7 +170,7 @@
       <em>
        My cousin started calling me. Come here and watch the match, Kohli started smahing Six and last 3 over are remaining and I asked him how much wicket has fallen.
        He said: Only 4. I was suprised that they did not lost the wickets from Powerplay.
-       So we decided to watch the match on mobile on Hotstar. Since the screen was small, we all did manage.
+       So we decided to watch the match on mobile on Hotstar. Since the screen was small, but still we manage.
        <br/>
        <strong>2 sixes</strong>,  India needed 160 runs to win the match, which team India reached on the last delivery.
       However, India needed 28 runs off 8 balls to win the match and it looked like Virat won't be able to 
