fix: broken url

--- a/blogs.html
+++ b/blogs.html
@@ -33,15 +33,14 @@
   <ol reversed>
     <div class="container container-center">
       <li>
-        <h1>The Memorable Header Goal⚽!</h1>
-        <small> July, 2021 </small>
+        <h1>King Kohli Comeback 👑🏏!</h1>
+        <small> Nov, 2022 </small>
         <p>
-          A usual Saturday in my life that resulted in one of the most memorable days, all thanks to The Memorable
-          Header Goal!
+          A normal Sunday in my life that resulted in one of the most memorable days, all thanks to King Kohli!
         </p>
         <a class="link link-primary" href="./blog1.html">read blog</a>
         <a class="link link-secondary"
-          href="https://medium.com/@VedantLahane/the-memorable-header-goal-69f027e1a099">read on medium</a>
+          href="https://medium.com/@sumedhkurhade/king-kohli-comeback-f9827c7aafa1">read on medium</a>
       </li>
       <li>
         <h1>“A Letter from Myself in 2030”</h1>
