--- a/blog1.html
+++ b/blog1.html
@@ -26,7 +26,7 @@
   </nav>
 
   <div class="container container-center">
-    <h1 class="hero-heading">King Kohli Comeback 👑🏏!</h1>
+    <h1 class="hero-heading"> 👑 King Kohli Comeback 🏏!</h1>
     <small>Nov, 2022</small>
 
     <img class="blog-hero" src="./images/blog1.svg" alt="medium-blog" />
