--- a/blogs.html
+++ b/blogs.html
@@ -33,7 +33,7 @@
   <ol reversed>
     <div class="container container-center">
       <li>
-        <h1>King Kohli Comeback 👑🏏!</h1>
+        <h1>👑 King Kohli Comeback 🏏!</h1>
         <small> Nov, 2022 </small>
         <p>
           A normal Sunday in my life that resulted in one of the most memorable days, all thanks to King Kohli!
