--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,9 @@
 
   <ol reversed>
     <div class="container container-center">
-      <li>
+      <!-- <li>
         <h1>stock-profit-loss (with api)</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           were you also wondering, what's the current status of the investment I had made in stocks? i was! so i made
           this app. this app takes some basic details such as stock name, stock purchase price & stock quantity you had
@@ -43,22 +43,22 @@
         </p>
         <a class="link link-primary" href="https://stonks-profitloss-api.netlify.app/">live project</a>
         <a class="link link-secondary" href="https://github.com/MarkVed17/stock-profit-loss-with-api">view source</a>
-      </li>
+      </li> -->
       <li>
         <h1>stock-profit-loss</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           were you also wondering, what's the current status of the investment I had made in stocks? i was! so i made
           this app. this app takes some basic details such as stock purchase price, current stock price & stock quantity
           you had purchased & calculates overall profit or loss percent along with absolute profit or loss. 😇 lookout
           for the theme change 👀
         </p>
-        <a class="link link-primary" href="https://stonks-profitloss.netlify.app/">live project</a>
-        <a class="link link-secondary" href="https://github.com/MarkVed17/stock-profit-loss">view source</a>
+        <a class="link link-primary" href="https://check-your-stock-price.netlify.app/">live project</a>
+        <a class="link link-secondary" href="https://github.com/Diablo-web/stock-profit-loss">view source</a>
       </li>
       <li>
         <h1>is your birth date a palindrome?</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           ever wondered if your birth date is a palindrome or not? well, then you don't need to worry, because I have
           got you covered! i have made this app in vanillaJS which tells whether your birth date is a palindrome or not.
@@ -71,7 +71,7 @@
       </li>
       <li>
         <h1>do you know your triangles?</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           interesting Quiz on triangles containing questions based on angles
           of a triangle, obtuse-angled triangle, acute-angled triangle,
@@ -91,7 +91,7 @@
       </li>
       <li>
         <h1>is your birthday lucky?</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want to know if your birthday is lucky for you or not? well, then i
           have something for you! an app that will tell you if your birthday
@@ -111,7 +111,7 @@
       </li>
       <li>
         <h1>cash register</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want help managing your cash register 💸 at the counter? well,
           there's no reason to worry, because i have got you covered! 😇 this
@@ -126,7 +126,7 @@
       </li>
       <li>
         <h1>bookshelf</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           Did you ever thought of reading books but never started one? Don't worry I've got a list for you. Happy
           Reading :)
@@ -136,7 +136,7 @@
       </li>
       <li>
         <h1>emoji interpreter</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           Know your emotions. This will interpret emojis. Put an emoji and it
           will tell what that means. 😲
@@ -146,7 +146,7 @@
       </li>
       <li>
         <h1>is it a prime number?</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want to know if a given number is a prime number or not? well, i
           have got you covered. this app which i have made in vanillaJS will
@@ -157,7 +157,7 @@
       </li>
       <li>
         <h1>is it a leap year?</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want to know if a given year is a leap year or not? well, don't
           worry 😇 i have got you covered 😉 this app that i have made in
@@ -168,7 +168,7 @@
       </li>
       <li>
         <h1>what would shakespeare sayeth?</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           well, how would Shakespeare say things assuming he had been alive
           today? were you thinking about this too! since i was, i made this
@@ -180,7 +180,7 @@
       </li>
       <li>
         <h1>talk banana</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           love minions? want to speak the minion/banana language? hop in at
           the site mentioned below & have fun translating normal english
@@ -191,7 +191,7 @@
       </li>
       <li>
         <h1>my portfolio website</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           this is my personal portfolio website. here you will find
           information about me, my tech stack, my projects & you can also read
@@ -202,7 +202,7 @@
       </li>
       <li>
         <h1>prime number</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want to know if a given number is a prime number or not? well, i
           have got you covered. this CLI app will tell you whether a given
@@ -214,7 +214,7 @@
       </li>
       <li>
         <h1>leap year</h1>
-        <small> July, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           want to know if a given year is a leap year or not? well, don't
           worry 😇 i have got you covered 😉 this CLI app that i have made in
@@ -226,7 +226,7 @@
       </li>
       <li>
         <h1>onepiece fandom quiz</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           This is a fun "OnePiece-Fandom-Quiz" built with
           <strong>NodeJS</strong>. If you think you are a true OnePiece Fan -
@@ -239,7 +239,7 @@
       </li>
       <li>
         <h1>how well do you know me?</h1>
-        <small> June, 2021 </small>
+        <small> Nov, 2022 </small>
         <p>
           A CLI app built with <strong>NodeJS</strong>. You can send this your
           friends & find who really knows you.
