docs: Update blogs.html

--- a/blogs.html
+++ b/blogs.html
@@ -43,10 +43,11 @@
           href="https://medium.com/@sumedhkurhade/king-kohli-comeback-f9827c7aafa1">read on medium</a>
       </li>
       <li>
-        <h1>“A Letter from Myself in 2030”</h1>
-        <small> July, 2020 </small>
+        <h1>“Top 5 Underrated website that will make your life easier.”</h1>
+        <small> Nov, 2020 </small>
         <p>
-          The Art of 'letter writing' beholds an invaluable significance and what better than writing it to your future self.
+          1. Class Central
+          Helps you to discover free online courses from top universities in the world. 
         </p>
         <a class="link link-primary" href="./blog2.html">read blog</a>
         <a class="link link-secondary"
